# focus-guardian

./: .gitignore  Dockerfile  HUMAN_TODO.md  README.md
.github/workflows/: ci.yml  deploy.yml
.nova/specs/focus-guardian-agent/: design.md  requirements.md  research.md  (+2 more)
assets/bgm/: README.md
backend/: pyproject.toml  scripts_spike.py
backend/app/: config.py  main.py
backend/app/adapters/: camera.py  speaker.py
backend/app/agents/: adk_agents.py  base.py  fake.py  rate_limited.py
backend/app/api/: deps.py  routes.py
backend/app/models/: config.py  hearing.py  monitoring.py
backend/app/repositories/: base.py  firestore.py  memory.py
backend/app/services/: hearing_flow.py  intervention_policy.py  monitoring.py  rate_limiter.py  session_service.py  speech_assets.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_flow.py
backend/tests/unit/: test_hearing_flow.py  test_intervention_policy.py  test_rate_limiter.py  test_speaker.py
docs/: architecture-rich.html  architecture.html  demo-video-script.md  design-compare.html  hackathon-requirements.md  protopedia-draft.md  shibaki-demo-design.md
docs/captures/: hearing-rule-setup-marks.json  hearing-rule-setup-mobile-marks.json
frontend/: index.html
frontend/src/: App.css  App.tsx  api.ts  audio.ts  capture.ts  icons.tsx  index.css  types.ts
scripts/: generate_bgm.py  setup_gcp.sh
scripts/demo-video/: README.md  cam.html  captions.mjs  cards.mjs  filter.txt  gen-audio.mjs  outro.html  record-cam.mjs  record-demo.mjs  record-hearing-mobile.mjs  record-hearing.mjs  title.html
(+16 files in other folders)
