[project]
name = "focus-guardian-backend"
version = "0.1.0"
description = "Focus Guardian - 目標実現を支援する監視AIエージェント (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "google-adk>=2.3,<3",
    "google-genai>=1.0",
    "google-cloud-firestore>=2.19",
    "google-cloud-texttospeech>=2.17",
    "google-cloud-storage>=2.18",
    "httpx>=0.27",
    "pydantic>=2.8",
    "pydantic-settings>=2.4",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.6",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"app/agents/adk_agents.py" = ["E501"]  # プロンプト内の JSON 例示は改行しない

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
